--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -71,3 +71,10 @@ height: 6em;
   font-size: 80%;
   font-weight: bold;
 }
+
+iflame {
+  width: 300px;
+  height: 300px;
+  frameborder: 0;
+  padding: 50px;
+}
